Fix section dropdown menu not showing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,10 @@
     overflow: hidden;
 }
 
+.rightpanel-tabs > .row {
+    overflow: visible;
+}
+
 .row [class*="col-"] {
     margin-bottom: -99999px;
     padding-bottom: 99999px;
